# Warblre

./: .gitignore  CITATION.cff  LICENSE  README.md  dune-project  flake.nix  package-lock.json  package.json  shell.nix  warblre-engines.opam  warblre.opam
.github/: pip-requirements.txt
.github/workflows/: ci.yml
MECMAR/: Base.v  Core.v  Focus.v  Map.v  Notation.v  OptionFlow.v  Patterns.v  Result.v  Semantics.v  Tactics.v  _CoqProject  dune
MECMAR/props/: Compile.v  Correctness.v  Definitions.v  EarlyErrors.v  Incorrectness.v  Match.v  StrictlyNullable.v
MECMAR/spec/: Base.v  ClutterFree.v  ECMA.v  Frontend.v  Notation.v  Patterns.v  RegExp.v  Semantics.v  StaticSemantics.v
MECMAR/spec/base/: Characters.v  Coercions.v  Errors.v  Numeric.v
MECMAR/strictly_nullable/: StrictlyNullable.v
MECMAR/tactics/: Focus.v  Retrieve.v  Specialize.v  Tactics.v
MECMAR/utils/: List.v  Option.v  Result.v  Typeclasses.v
doc/: Differences.md  Executables.md  Implementation.md  Test262.md  vFlag.md
doc/matching_pipeline/: build.sh  picture.tex
engines/common/: Encoding.ml  Engines.ml  Extraction.v  Interop.ml  Notations.ml  Patterns.ml  Printers.ml  Testing.ml  UnicodeProperties.ml  Utils.ml
engines/js/: Alphabetic.ml  ArrayExotic.ml  BigInt.ml  Conversion.ml  Extraction.v  Host.ml  HostEngine.ml  JsEngineParameters.ml  JsEngines.ml  Parser.ml  SimpleFold.ml  dune  regexpp-map.mjs
engines/ocaml/: BigInt.ml  Extraction.v  Host.ml  OCamlEngineParameters.ml  OCamlEngines.ml  dune
etc/matching_pipeline/: build.sh  picture.tex
example/: Main.ml  dune
example/browser_playground/: dune  index.html  webpack.config.js
examples/: dune-project
examples/browser_playground/: Main.ml  dune  index.html
examples/cmd_playground/: Main.ml  dune  webpack.config.js
examples/coq_proof/: Example.v  _CoqProject  dune
examples/ocaml_example/: Main.ml  dune
extraction/: ECMA.ml  Encoding.ml  Engines.ml  Extraction.v  Helpers.ml  Interop.ml  Notations.ml  Patterns.ml  Printers.ml  Testing.ml  Utils.ml  dune
fuzzer/: Fuzzer.ml  Main.ml  dune  fuzzer_bugs.md  jsmatcher.js  repack.js  webpack.config.js
js/: Conversion.ml  HostEngine.ml  JsEngines.ml  dune  repack.js  string.js
mechanization/: _CoqProject  dune
mechanization/props/: Compile.v  Definitions.v  EarlyErrors.v  EndToEnd.v  Match.v  NodeProps.v  StrictlyNullable.v
mechanization/spec/: API.v  Base.v  Engine.v  Errors.v  Fragments.v  Frontend.v  Node.v  Notation.v  Parameters.v  Patterns.v  RegExpRecord.v  Semantics.v  StaticSemantics.v
mechanization/spec/base/: Base.v  Characters.v  Coercions.v  Numeric.v
mechanization/tactics/: Focus.v  Retrieve.v
mechanization/utils/: List.v  Result.v  Return.v  Typeclasses.v
parser/: Main.ml  dune  lexer.mll  parser.mly  parser.v  parser.vy
specification_check/: coq_parser.py  ecma_parser.py  expected_text_output.txt  main.py
test/: Backrefs.ml  BoundaryAssertions.ml  Counterexample.ml  Lookarounds.ml  Tests.ml  UnicodeAlphabetic.ml  dune
test262/: Main.ml  Redirect.ml  RegexpTree.ml  dune
tests/: Backrefs.ml  BoundaryAssertions.ml  Counterexample.ml  Exec.ml  Lookarounds.ml  Printer.ml  Tests.ml  UnicodeAlphabetic.ml  dune  dune-project
tests/fuzzer/: Fuzzer.ml  dune  webpack.config.js
tests/test262/: dune  webpack.config.js
tests/tests/: Counterexample.ml  Exec.ml  UnicodeAlphabetic.ml  dune
