(coq.extraction
 (prelude Extraction)
 (extracted_modules Extracted)
 (theories Warblre Ltac2))

(library
 (name Warblre)
 (libraries integers uucp))

; Extraction to int generates functions which are not really recursive, so we silence the warning.
; > Error (warning 39 [unused-rec-flag]): unused rec flag.

(env
 (dev
  (flags
   (:standard -w -27 -w -39 -w -67))))
