(melange.emit
 (alias fuzzer-js)
 (target app)
 (module_systems (es6 mjs))
 (libraries warblre_js)
 (preprocess (pps melange.ppx)))

; Webpack it into a single, browser-compatible, js file
(rule
 (target warblre-node-fuzzer.js)
 (deps
  (alias_rec fuzzer-js)
  (:entrypoint (file app/fuzzer/Fuzzer.mjs))
  (:config (file webpack.config.js)))
 (action (no-infer (progn
  (run webpack-cli ./%{entrypoint} --config %{config} --no-stats)
  (copy dist/%{target} %{target})
  (run chmod u+x %{target}))))
 (enabled_if %{bin-available:webpack-cli}))

(rule
 (target warblre-node-fuzzer.js)
 (action (progn
  (echo "Webpack-cli not installed: skipping fuzzer\n")
  (write-file %{target} "#!/usr/bin/env sh\necho \"Webpack-cli was not installed at build-time: cannot execute 'fuzzer', which was not built.\"\nexit -1")
  (run chmod u+x %{target})))
 (enabled_if (not %{bin-available:webpack-cli})))

(install
 (section bin)
 (files (warblre-node-fuzzer.js as fuzzer)))