(melange.emit
 (alias test262-js)
 (target app)
 (module_systems (es6 mjs))
 (libraries warblre_js)
 (preprocess (pps melange.ppx)))

; Webpack it into a single, browser-compatible, js file
(rule
 (target (dir dist))
 (deps
  (alias_rec test262-js)
  (:entrypoint (file app/test262/Redirect.mjs))
  (:config (file webpack.config.js)))
 (action (run webpack-cli ./%{entrypoint} --config %{config} --no-stats)))
; Copy said file to the root of the build directory
(rule
 (target warblre-node-redirect.js)
 (deps (:js_file (file dist/warblre-node-redirect.js)))
 (action (copy %{js_file} %{target})))