; Replicate the goodies developed for the OCaml engine
(copy_files#
 (only_sources true)
 (files ../common/*.ml))
(copy_files
 (only_sources true)
 (files ../common/Extraction.v))

; Extract with different directives
(coq.extraction
 (prelude Extraction)
 (extracted_modules Extracted)
 (theories Warblre Ltac2))

; Make a library out of it
(library
 (name warblre)
 (public_name warblre.ocaml)
 (libraries uucp integers zarith))

(env
 (dev
  (flags
   (:standard -w -27 -w -39 -w -67))))
