(melange.emit
 (alias browser-playground-js)
 (target app)
 (module_systems (es6 mjs))
 (libraries melange.dom warblre warblre_js)
 (preprocess (pps melange.ppx)))

(rule
 (targets (dir dist))
 (deps
  (alias_rec browser-playground-js)
  (:entrypoint (file app/example/browser_playground/Main.mjs))
  (:config (file webpack.config.js)))
 (action (run webpack-cli ./%{entrypoint} --config %{config} --config-name warblre-browser-playground --no-stats)))