(melange.emit
 (alias browser-playground-js)
 (target app)
 (module_systems (es6 mjs))
 (libraries melange.dom warblre_js)
 (preprocess (pps melange.ppx)))

; Webpack it into a single, browser-compatible, js file
(rule
 (targets (dir dist))
 (deps
  (alias_rec browser-playground-js)
  (:entrypoint (file app/examples/browser_playground/Main.mjs))
  (:config (file webpack.config.js)))
 (action (run webpack-cli ./%{entrypoint} --config %{config} --config-name warblre-browser-playground --no-stats)))
; Copy said file to the root of the build directory
(rule
 (target warblre-browser-playground.js)
 (deps (:js_file (file dist/warblre-browser-playground.js)))
 (action (copy %{js_file} %{target})))