(melange.emit
 (alias node-playground-js)
 (target app)
 (module_systems (es6 mjs))
 (libraries melange.dom warblre_js)
 (preprocess (pps melange.ppx)))

; Webpack it into a single, node-compatible, js file
(rule
 (target warblre-node-playground.js)
 (deps
  (alias_rec node-playground-js)
  (:entrypoint (file app/examples/cmd_playground/Main.mjs))
  (:config (file webpack.config.js)))
 (action (no-infer (progn
  (run webpack-cli ./%{entrypoint} --config %{config} --no-stats)
  (copy dist/%{target} %{target}))))
 (enabled_if %{bin-available:webpack-cli}))

(rule
 (target dummy)
 (action (progn
  (echo "Webpack-cli not installed: skipping examples/cmd_playground\n")
  (write-file dummy "")))
 (enabled_if (not %{bin-available:webpack-cli})))

(install
 (section bin)
 (files (warblre-node-playground.js as playground)))